fix
Signed-off-by: gengjun-git <gengjun@starrocks.com>